--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ params:
   color_scheme: light
   accent_color: pink
   header:
-    title: Наталия Михайлова
+    title: test
     has_nav: true
     nav_links:
       - label: Home
